--- a/index.html
+++ b/index.html
@@ -189,6 +189,24 @@
                 <h2 class="serif-font text-2xl text-white group-hover:text-amber-400 transition text-center">Atmosphere Engine</h2>
             </a>
 
+            <!-- 2. Speech Director -->
+            <a href="speechdirector.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
+                <div class="h-32 bg-indigo-950 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
+                    <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
+                    <span class="text-4xl">🎬</span>
+                </div>
+                <h2 class="serif-font text-2xl text-white group-hover:text-amber-400 transition text-center">Speech Director</h2>
+            </a>
+
+            <!-- 3. Speech Prompter -->
+            <a href="speechprompter.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
+                <div class="h-32 bg-gray-800 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
+                    <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
+                    <span class="text-4xl">📜</span>
+                </div>
+                <h2 class="serif-font text-2xl text-white group-hover:text-amber-400 transition text-center">Speech Prompter</h2>
+            </a>
+
         </div>
     </div>
     
