--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@
                 <h2 class="serif-font text-2xl text-white group-hover:text-amber-400 transition text-center">Manor House Defence</h2>
             </a>
 
+            <!-- 9. FWL: Attack 25 -->
+            <a href="attack25.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
+                <div class="h-32 bg-lime-900 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
+                    <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
+                    <span class="text-4xl">💥</span>
+                </div>
+                <h2 class="serif-font text-2xl text-white group-hover:text-amber-400 transition text-center">FWL: Attack 25</h2>
+            </a>
+
         </div>
     </div>
 
