--- a/safe.html
+++ b/safe.html
@@ -232,8 +232,8 @@
     <div class="vault-body">
         <div class="vault-interior" id="interior">
             <div class="treasure-icon">💎 ✨</div>
-            <div class="congrats-text">Congratulations</div>
-            <div style="font-size: 1.2rem; color: #cbd5e1;">Access Granted</div>
+            <div class="congrats-text">Congratulations!</div>
+            <div style="font-size: 1.2rem; color: #cbd5e1;">You did it!</div>
             <button class="lock-btn" onclick="app.lockSafe()">🔒 Lock Safe</button>
         </div>
     </div>
