--- a/attack25.html
+++ b/attack25.html
@@ -311,7 +311,7 @@
         { id: 20, q: "What is the capital of China?", a: "Beijing" },
         { id: 21, q: "What city is the Merlion from?", a: "Singapore" },
         { id: 22, q: "What are the four countries of the UK?", a: "England, Scotland, Wales, N. Ireland" },
-        { id: 23, q: "What country's national anthem is this?", a: "The UK", audio: "assets/canadaanthem.mp3" },
+        { id: 23, q: "What country's national anthem is this?", a: "Canada", audio: "assets/canadaanthem.mp3" },
         { id: 24, q: "What day is December 25th?", a: "Christmas Day" },
         { id: 25, q: "What is the capital of Australia?", a: "Canberra" }
     ];
