--- a/attack25.html
+++ b/attack25.html
@@ -488,38 +488,33 @@
 <audio id="external-audio"></audio>
 
 <script>
-    // --- Initial Data with LIVE IMAGES ---
+    // --- Initial Data with FIXED LIVE IMAGES ---
     const defaultQuestions = [
         { id: 1, q: "What is the capital of the U.K.?", a: "London" },
-        // Wikimedia Commons Image for Australian Dollar
-        { id: 2, q: "What is the money of Australia?", a: "Australian Dollar", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Australian_50_dollar_note_2018_design.jpg/640px-Australian_50_dollar_note_2018_design.jpg" },
+        // Fixed: Stable file link for Aus 5 Dollar note
+        { id: 2, q: "What is the money of Australia?", a: "Australian Dollar", image: "https://upload.wikimedia.org/wikipedia/commons/8/87/Australian_5_dollar_note_2016_design.jpg" },
         { id: 3, q: "What are the 3 most popular sports in the UK?", a: "Football, Rugby, Cricket" },
         { id: 4, q: "What is the capital of France?", a: "Paris" },
         { id: 5, q: "Who sang 'We Will Rock You'?", a: "Queen", audio: "assets/wewillrockyou.mp3" },
-        // Sydney Opera House
         { id: 6, q: "What city is the Opera House in?", a: "Sydney", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Sydney_Opera_House_Sails.jpg/640px-Sydney_Opera_House_Sails.jpg" },
         { id: 7, q: "Which famous British group is this?", a: "The Beatles", video: "assets/pennylane.mp4", reverse: true }, 
         { id: 8, q: "What is the money of America?", a: "Dollar ($)" },
         { id: 9, q: "What is the money of the U.K.?", a: "Pound (£)" },
-        // Elephant
         { id: 10, q: "Unscramble: nhtalepe", a: "Elephant", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Elephant_Diversity.jpg/640px-Elephant_Diversity.jpg" },
         { id: 11, q: "Unscramble: clash its smart", a: "Last Christmas" }, 
         { id: 12, q: "What is the most popular sport in Australia?", a: "Australian Rules Football" },
         { id: 13, q: "What is the capital of Canada?", a: "Ottawa" },
-        // Kiwi
-        { id: 14, q: "What country is this animal from?", a: "New Zealand", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Te_Papa_Kiwi_%28cropped%29.jpg/640px-Te_Papa_Kiwi_%28cropped%29.jpg" },
-        // Lemur
-        { id: 15, q: "What country is this animal from?", a: "Madagascar", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Ring-tailed_lemur_%28Lemur_catta%29.jpg/640px-Ring-tailed_lemur_%28Lemur_catta%29.jpg" },
-        // Pyramids
+        // Fixed: Stable Kiwi run image
+        { id: 14, q: "What country is this animal from?", a: "New Zealand", image: "https://upload.wikimedia.org/wikipedia/commons/b/b8/Kiwi_run.jpg" },
+        // Fixed: Stable Lemur image
+        { id: 15, q: "What country is this animal from?", a: "Madagascar", image: "https://upload.wikimedia.org/wikipedia/commons/2/20/Ring-tailed_lemur_%28Lemur_catta%29.jpg" },
         { id: 16, q: "What country are the Pyramids in?", a: "Egypt", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Kheops-Pyramid.jpg/640px-Kheops-Pyramid.jpg" },
-        // Machu Picchu
         { id: 17, q: "What country is Machu Picchu in?", a: "Peru", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Machu_Picchu%2C_Peru.jpg/640px-Machu_Picchu%2C_Peru.jpg" },
-        // Statue of Liberty
         { id: 18, q: "What city is the Statue of Liberty in?", a: "New York", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Statue_of_Liberty_7.jpg/640px-Statue_of_Liberty_7.jpg" },
         { id: 19, q: "What is the money of Germany?", a: "The Euro (€)" },
         { id: 20, q: "What is the capital of China?", a: "Beijing" },
-        // Merlion
-        { id: 21, q: "What city is the Merlion from?", a: "Singapore", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Merlion_Singapore_2.jpg/640px-Merlion_Singapore_2.jpg" },
+        // Fixed: Stable Merlion image
+        { id: 21, q: "What city is the Merlion from?", a: "Singapore", image: "https://upload.wikimedia.org/wikipedia/commons/a/a6/Merlion_Singapore_Water_Feature.jpg" },
         { id: 22, q: "What are the four countries of the UK?", a: "England, Scotland, Wales, N. Ireland" },
         { id: 23, q: "What country's national anthem is this?", a: "Canada", audio: "assets/canadaanthem.mp3" },
         { id: 24, q: "What day is December 25th?", a: "Christmas Day" },
