--- a/attack25.html
+++ b/attack25.html
@@ -462,8 +462,8 @@
         <div id="question-number">QUESTION</div>
         
         <div id="media-container">
-            <!-- New Image Element -->
-            <img id="q-image" src="" alt="Question Image">
+            <!-- New Image Element with Fallback logic -->
+            <img id="q-image" src="" alt="Question Image" onerror="this.src='https://placehold.co/600x400?text=Image+Not+Found';">
             <video id="q-video" controls playsinline></video>
             <button id="audio-btn" onclick="toggleAudio()">
                 <span>🔊</span> <span id="audio-btn-text">Play Audio</span>
@@ -488,33 +488,30 @@
 <audio id="external-audio"></audio>
 
 <script>
-    // --- Initial Data with FIXED LIVE IMAGES ---
+    // --- Initial Data with LOCAL ASSET PATHS ---
+    // Note: You must upload images to your 'assets' folder with these names.
     const defaultQuestions = [
         { id: 1, q: "What is the capital of the U.K.?", a: "London" },
-        // Fixed: Stable file link for Aus 5 Dollar note
-        { id: 2, q: "What is the money of Australia?", a: "Australian Dollar", image: "https://upload.wikimedia.org/wikipedia/commons/8/87/Australian_5_dollar_note_2016_design.jpg" },
+        { id: 2, q: "What is the money of Australia?", a: "Australian Dollar", image: "assets/aus_dollar.jpeg" },
         { id: 3, q: "What are the 3 most popular sports in the UK?", a: "Football, Rugby, Cricket" },
         { id: 4, q: "What is the capital of France?", a: "Paris" },
         { id: 5, q: "Who sang 'We Will Rock You'?", a: "Queen", audio: "assets/wewillrockyou.mp3" },
-        { id: 6, q: "What city is the Opera House in?", a: "Sydney", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Sydney_Opera_House_Sails.jpg/640px-Sydney_Opera_House_Sails.jpg" },
+        { id: 6, q: "What city is the Opera House in?", a: "Sydney", image: "assets/opera_house.jpg" },
         { id: 7, q: "Which famous British group is this?", a: "The Beatles", video: "assets/pennylane.mp4", reverse: true }, 
         { id: 8, q: "What is the money of America?", a: "Dollar ($)" },
         { id: 9, q: "What is the money of the U.K.?", a: "Pound (£)" },
-        { id: 10, q: "Unscramble: nhtalepe", a: "Elephant", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Elephant_Diversity.jpg/640px-Elephant_Diversity.jpg" },
+        { id: 10, q: "Unscramble: nhtalepe", a: "Elephant", image: "assets/elephant.jpg" },
         { id: 11, q: "Unscramble: clash its smart", a: "Last Christmas" }, 
         { id: 12, q: "What is the most popular sport in Australia?", a: "Australian Rules Football" },
         { id: 13, q: "What is the capital of Canada?", a: "Ottawa" },
-        // Fixed: Stable Kiwi run image
-        { id: 14, q: "What country is this animal from?", a: "New Zealand", image: "https://upload.wikimedia.org/wikipedia/commons/b/b8/Kiwi_run.jpg" },
-        // Fixed: Stable Lemur image
-        { id: 15, q: "What country is this animal from?", a: "Madagascar", image: "https://upload.wikimedia.org/wikipedia/commons/2/20/Ring-tailed_lemur_%28Lemur_catta%29.jpg" },
-        { id: 16, q: "What country are the Pyramids in?", a: "Egypt", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Kheops-Pyramid.jpg/640px-Kheops-Pyramid.jpg" },
-        { id: 17, q: "What country is Machu Picchu in?", a: "Peru", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Machu_Picchu%2C_Peru.jpg/640px-Machu_Picchu%2C_Peru.jpg" },
-        { id: 18, q: "What city is the Statue of Liberty in?", a: "New York", image: "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a1/Statue_of_Liberty_7.jpg/640px-Statue_of_Liberty_7.jpg" },
+        { id: 14, q: "What country is this animal from?", a: "New Zealand", image: "assets/kiwi.jpg" },
+        { id: 15, q: "What country is this animal from?", a: "Madagascar", image: "assets/lemur.jpg" },
+        { id: 16, q: "What country are the Pyramids in?", a: "Egypt", image: "assets/pyramids.jpg" },
+        { id: 17, q: "What country is Machu Picchu in?", a: "Peru", image: "assets/machu_picchu.jpg" },
+        { id: 18, q: "What city is the Statue of Liberty in?", a: "New York", image: "assets/statue_liberty.jpg" },
         { id: 19, q: "What is the money of Germany?", a: "The Euro (€)" },
         { id: 20, q: "What is the capital of China?", a: "Beijing" },
-        // Fixed: Stable Merlion image
-        { id: 21, q: "What city is the Merlion from?", a: "Singapore", image: "https://upload.wikimedia.org/wikipedia/commons/a/a6/Merlion_Singapore_Water_Feature.jpg" },
+        { id: 21, q: "What city is the Merlion from?", a: "Singapore", image: "assets/merlion.jpg" },
         { id: 22, q: "What are the four countries of the UK?", a: "England, Scotland, Wales, N. Ireland" },
         { id: 23, q: "What country's national anthem is this?", a: "Canada", audio: "assets/canadaanthem.mp3" },
         { id: 24, q: "What day is December 25th?", a: "Christmas Day" },
