--- a/attack25.html
+++ b/attack25.html
@@ -491,10 +491,10 @@
     // --- Initial Data with LOCAL ASSET PATHS ---
     // Note: You must upload images to your 'assets' folder with these names.
     const defaultQuestions = [
-        { id: 1, q: "What is the capital of the U.K.?", a: "London" },
+        { id: 1, q: "What is the capital of the U.K.?", a: "London", image: "assets/london.jpg" },
         { id: 2, q: "What is the money of Australia?", a: "Australian Dollar", image: "assets/aus_dollar.jpeg" },
-        { id: 3, q: "What are the 3 most popular sports in the UK?", a: "Football, Rugby, Cricket" },
-        { id: 4, q: "What is the capital of France?", a: "Paris" },
+        { id: 3, q: "What are the 3 most popular sports in the UK?", a: "Football, Rugby, Cricket", image: "assets/wembley.jpg" },
+        { id: 4, q: "What is the capital of France?", a: "Paris", image: "assets/paris.jpg" },
         { id: 5, q: "Who sang 'We Will Rock You'?", a: "Queen", audio: "assets/wewillrockyou.mp3" },
         { id: 6, q: "What city is the Opera House in?", a: "Sydney", image: "assets/opera_house.jpg" },
         { id: 7, q: "Which famous British group is this?", a: "The Beatles", video: "assets/pennylane.mp4", reverse: true }, 
